<resources>
    <string name="app_name">BookApp</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="examle_gmail_com">examle@gmail.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirmpassword">ConfirmPassWord</string>
    <string name="or">OR</string>
    <string name="login_by">Login by</string>
    <string name="create_account_by_google">Create Account by Google</string>
    <string name="no_have_account">No Have Account?</string>
    <string name="continue_without_create_account">Continue without Create Account</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_account_by_google">Login Account by Google</string>
    <string name="forget_password">Forget PassWord</string>
    <string name="please_enter_your_email_address_to_reset_your_password">please enter your email address to reset your password</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="please_enter_4_digit_code_send_to_your_email">please enter 4 digit code send to your email</string>
    <string name="verify">Verify</string>
    <string name="home">Home</string>
    <string name="search_book_here">Search Book Here</string>
    <string name="college">College</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="top_downloads">Top Downloads</string>
    <string name="add_category">+ Add Category</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="name">Name</string>
    <string name="create_account_by">Create Account By</string>
    <string name="new_password_must_be_different_from_the_previously_used_password">New Password Must be Different From The Previously Used Password</string>
    <string name="new_password">New PassWord</string>
    <string name="n_a">N/A</string>
    <string name="contact_us">Contact Us</string>
    <string name="continue_as_a_guest">Continue as a Guest</string>
    <string name="request_permission">Request Permission</string>
    <string name="about">About</string>
    <string name="logout">LogOut</string>
    <string name="edit_profile">Edit profile</string>
    <string name="enter_password">Enter Password</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="optional">(Optional)</string>
    <string name="email_address">Email Address</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="full_name">Full Name</string>
    <string name="university_id_number">University Id Number</string>
    <string name="gpa">GPA</string>
    <string name="e_g_99_9">e.g: 99.9</string>
    <string name="e_g_120212588">e.g : 120212588</string>
    <string name="request">Request</string>
    <string name="notifications">Notifications</string>
    <string name="college_added">College Added</string>
    <string name="it_college_has_been_added_to_the_colleges_go_check">IT college has been added to the Colleges Go check..</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="version_1_2_4">Version 1.2.4</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including_versions_of_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="web_development">Web Development</string>
    <string name="add_college">Add College</string>
    <string name="chose_a_college">Chose a College</string>
    <string name="chose_a_major">Chose a Major</string>
    <string name="details_book">Details Book</string>
    <string name="python">Python</string>
    <string name="web_develpoment">Web Develpoment</string>
    <string name="views">Views</string>
    <string name="size">Size</string>
    <string name="enter_a_college_name">Enter A College Name</string>
    <string name="college_name">College Name</string>
    <string name="add">Add</string>
    <string name="add_major">Add Major</string>
    <string name="enter_a_major_name">Enter A Major Name</string>
    <string name="major_name">Major Name</string>
    <string name="add_course">Add Course</string>
    <string name="enter_a_course_name">Enter A Course Name</string>
    <string name="course_name">Course Name</string>
    <string name="major">Major</string>
    <string name="add_book">Add Book</string>
    <string name="book_name">Book Name</string>
    <string name="enter_a_book_name">Enter A Book Name</string>
    <string name="book_description">Book Description</string>
    <string name="course">Course</string>
    <string name="enter_a_book_description">Enter A Book Description</string>
    <string name="add_material">Add Material</string>
    <string name="please_select_course">Please Select Course</string>
    <string name="please_select_material_type">Please Select Material Type</string>
    <string name="slides_summery">Slides/Summery</string>
    <string name="select_the_file_you_want_to_upload">Select the file you want to upload</string>
    <string name="click_here">Click Here...</string>
    <string name="upload">Upload</string>
    <string name="chose_a_course">Chose a Course</string>
    <string name="please_select_books">Please Select Books</string>
    <string name="chose_a_book">Chose a Book</string>
    <string name="search_a_college">Search a College</string>
    <string name="chose_your_college">Chose Your College</string>
    <string name="name_college">Name College</string>
    <string name="search_a_majors">Search a Majors</string>
    <string name="chose_your_majors">Chose your Majors</string>
    <string name="name_majors">Name Majors</string>
    <string name="search_a_course">Search a Course</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="academic_level">academic level</string>
    <string name="chose_a_level">chose a level</string>
    <string name="your_message">your message..</string>
    <string name="your_email">your email...</string>
    <string name="enter_you_name">enter you name...</string>
    <string name="chose_a_level_for_course">Chose a Level For Course</string>
    <string name="study_level">Study Level</string>
    <string name="subject_material">Subject Material</string>
    <string name="search_here">Search here...</string>
    <string name="summery">Summery</string>
    <string name="summery_slide">Summery + Slide</string>
    <string name="read">Read</string>
    <string name="download">Download</string>
    <string name="read_book">Read Book</string>
    <string name="update">Update</string>
    <string name="edit_college_name">Edit College Name</string>
    <string name="login_for_super_admin">login For Super Admin</string>
    <string name="login_for_super_admin_click_here">login For Super Admin Click here..</string>
    <string name="dashboard">Dashboard</string>
    <string name="all_users">All Users</string>
    <string name="role">Role</string>
    <string name="admin">Admin</string>
    <string name="student_details">Student Details</string>
    <string name="id">ID</string>
    <string name="book">Book</string>
    <string name="exams">Exams</string>
    <string name="edit_course">Edit Course</string>
    <string name="all_message">All Message</string>
    <string name="file_pdf">File PDF</string>
    <string name="upload_pdf_url">Upload Pdf Url</string>
</resources>