<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#223A59"
    android:padding="20dp"
    tools:context=".activities.MainActivity">

    <ImageView
        android:src="@drawable/sp"
        android:id="@+id/iconIv"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="500dp"/>


    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconIv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Welcome to Book App"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:textColor="@color/white"
        android:layout_above="@+id/btnCreateAccount"
        android:text="@string/login"
        android:background="@drawable/shape_btn_google"
        android:layout_marginBottom="10dp"
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_above="@+id/skipBtn"
        android:textColor="@color/white"
        android:text="@string/create_account"
        android:background="@drawable/shape_button02"
        android:layout_marginBottom="10dp"
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:text="@string/continue_as_a_guest"
        android:background="@drawable/shape_button02"
        android:layout_marginBottom="10dp"
        android:id="@+id/skipBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>